--- a/proyecto-angular/angular.json
+++ b/proyecto-angular/angular.json
@@ -23,7 +23,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/assets/css/style.css",
+              "src/assets/css/style.css"
             ],
             "scripts": []
           },
