--- a/proyecto-angular/angular.json
+++ b/proyecto-angular/angular.json
@@ -26,7 +26,7 @@
               "src/assets/css/style.css"
             ],
             "scripts": [
-              ""
+              "node_modules/jquery/dist/jquery.min.js"
             ]
           },
           "configurations": {
