--- a/proyecto-angular/angular.json
+++ b/proyecto-angular/angular.json
@@ -23,7 +23,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/assets/css/style.css"
+              "src/assets/css/style.css",
+              "src/assets/bxslider/dist/jquery.bxslider.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
