--- a/proyecto-angular/angular.json
+++ b/proyecto-angular/angular.json
@@ -24,7 +24,7 @@
             ],
             "styles": [
               "src/assets/css/style.css",
-              "src/assets/bxslider/dist/jquery.bxslider.css"
+              "src/assets/bxslider/dist/jquery.bxslider.min.js"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
